Added super user creation feature